<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_create_new_user"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.olayg.buttonchallenge.view.createuseractivity.CreateUser"
    tools:showIn="@layout/activity_create_user"
    android:padding="30dp"
    android:orientation="vertical">
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_user_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:hint="@string/user_full_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:hint="@string/user_email"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSaveUser"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:theme="@style/PrimaryButton"
        android:padding="10dp"
        android:text="@string/button_save"/>



</LinearLayout>
